<resources>
    <string name="app_name">Pokedex</string>

    <!-- Home page -->
    <string name="national_dex">National Dex</string>
    <string name="kanto_dex">Kanto</string>
    <string name="johto_dex">Johto</string>
    <string name="hoenn_dex">Hoenn</string>
    <string name="sinnoh_dex">Sinnoh</string>
    <string name="unova_dex">Unova</string>
    <string name="kalos_dex">Kalos</string>
    <string name="alola_dex">Alola</string>
    <string name="galar_dex">Galar</string>
    <string name="paldea_dex">Paldea</string>

    <!-- Dex list -->
    <string name="dex_list_number"># %1$d</string>

    <!-- Gender symbols -->
    <string name="male_symbol">♂</string>
    <string name="female_symbol">♀</string>

    <!-- Details -->
    <string name="details_pokemon_number"># %s</string>
    <string name="details_information_header">Information</string>
    <string name="details_height_header">Height:</string>
    <string name="details_height_placeholder">ABC</string>
    <string name="details_weight_header">Weight:</string>
    <string name="details_weight_placeholder">XYZ</string>
    <string name="details_flavour_text_placeholder">FLAVOUR TEXT</string>
    <string name="details_gender_ratio_header">Gender Ratio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>